--- a/app/src/main/res/layout/fragment_add_work.xml
+++ b/app/src/main/res/layout/fragment_add_work.xml
@@ -10,9 +10,10 @@
     <RelativeLayout
         android:id="@+id/parent_relative_add_work"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:context=".work.AddWorkFragment"
         android:padding="@dimen/_5sdp"
+        android:background="#E6F1F7"
         >
 
         <ImageButton
@@ -21,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_5sdp"
             android:src="@drawable/ic_back"
-            android:background="@color/white"
+            android:background="#00000000"
             />
 
 
