--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,6 +11,7 @@
         android:id="@+id/parent_nested_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#E6F1F7"
         >
 
     <RelativeLayout
