--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".request.RequestFragment"
+        android:background="#E6F1F7"
         >
 
         <androidx.recyclerview.widget.RecyclerView
