--- a/app/src/main/res/layout/item_work.xml
+++ b/app/src/main/res/layout/item_work.xml
@@ -18,6 +18,20 @@
             android:layout_centerHorizontal="true"
             />
 
+        <TextView
+            android:id="@+id/item_txt_title_work"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_5sdp"
+            android:padding="@dimen/_5sdp"
+            android:text="Title Work"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15ssp"
+            android:textStyle="bold"
+            android:layout_below="@id/item_img_work"
+            />
+
+
         <ImageView
             android:id="@+id/item_img_btn_more"
             android:layout_width="wrap_content"
@@ -25,8 +39,9 @@
             android:src="@drawable/more_menu"
             android:padding="@dimen/_5sdp"
             android:layout_margin="@dimen/_5sdp"
-            android:layout_below="@id/item_img_work"
-            android:layout_alignParentEnd="true" />
+            android:layout_below="@id/item_txt_title_work"
+            android:layout_alignParentEnd="true"
+            />
 
     </RelativeLayout>
 </layout>
